--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <tittle> DEGREE COLLEGE TEKKALI</tittle>
+  <tittle> FREE FIRE</tittle>
 </head>
 </body>
-<h1> Python Fullstack</h1>
+<h1> hello everyone</h1>
 </body>
 </html>
