--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <tittle> FREE FIRE</tittle>
+  <tittle> WELCOME TO MY WORLD</tittle>
 </head>
 </body>
-<h1> hello everyone</h1>
+<h1> hello</h1>
+  <h2> how can i help you?</h2>
 </body>
 </html>
